# IAmaker

./: .gitignore  CMakeLists.txt  Makefile  algorithm.hpp  board.cpp  main.cpp  node.cpp  node.hpp  state.cpp  state.hpp
Motor/: CMakeLists.txt  action.cpp  action.hpp  node.cpp  node.hpp  state.hpp
Sample_Rubik2D/: CMakeLists.txt  board.cpp  board.cpp.autosave  board.hpp  main.cpp
Samples/: CMakeLists.txt
Samples/Rubik2D/: CMakeLists.txt  actionrubik2d.cpp  actionrubik2d.hpp  board.cpp  board.hpp  main.cpp
